.previous-post and .next-post has flex grow in order to show on the correct side if there is only one of them available. .next-post also has text-align: right

--- a/wp-content/themes/mytheme/assets/styles/scss/04_module/_pagination-single.scss
+++ b/wp-content/themes/mytheme/assets/styles/scss/04_module/_pagination-single.scss
@@ -33,3 +33,11 @@
 		}
 	}
 }
+
+.previous-post, .next-post {
+	flex-grow: 1;
+}
+
+.next-post {
+	text-align: right;
+}
